Proyectos/Proyecto2/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: so1p2
# kubectl apply -f namespace.yaml
