Proyectos/Proyecto2/python-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-python
  namespace: so1p2
spec:
  selector:
    matchLabels:
      app: api-python
  replicas: 1
  template:
    metadata:
      labels:
        app: api-python
    spec:
      containers:
      - name: api-python
        image: marjxg/api-python-v5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          protocol: TCP
