Proyectos/Proyecto2/redis-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-db
  namespace: so1p2
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
