Proyectos/Proyecto2/nodejs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: so1p2
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: node-app
  type: NodePort

# kubectl apply -f service-nodejs.yaml
