Proyectos/Proyecto2/python-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-python
  namespace: so1p2
spec:
  selector:
    app: api-python
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
  type: NodePort
