Proyectos/Proyecto2/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-db
  namespace: so1p2
  labels:
    app: redis
spec:
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  selector:
    app: redis
